Elastic_IP.tf
# Allocating Elastic IP:

resource "aws_eip" "myeip" {
  instance = aws_instance.web.id
  vpc      = true
}
